2011-09-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameSpace.cpp: fix regression in behavior
	of yarp::os::Network::checkNetwork [thanks Martin Peniak]

2011-09-12 Lorenzo Natale <lorenzo.natale@iit.it>
        * conf/YarpVersion.cmake
        tagging 2.3.12
     
2011-09-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: apply patch to add interfaces for impedance
	and torque control [thanks Stephane Lallee]

2011-09-09  Andrea Del Prete    <andrea.delprete@iit.it>
	* src/libYARP_math/src/math.cpp
	* src/libYARP_math/include/yarp/math/Math.h	
	These methods have been moved from iCub::ctrlLib to yarp::math:
	norm(Vector), norm2(Vector), findMax(Vector), findMin(Vector), cross(Vector, Vector)
	The reason is that these are really basic operations, so 
	yarp::math is the best place for them.
	Since the namespace has changed, every call to these methods 
	using explicit namespace has been modified accordingly. For instance:
	iCub::ctrl::norm(x)  =>  yarp::math::norm(x)
	As far as the icub main build is concerned, we have checked that everything compiles.
	We are also going to check the most used modules in the "contrib" directory.
	New methods have been added to yarp::math, to ease linear algebra operations:
	- pile: vertical matrix-vector concatenation
	- cat: horizontal matrix-vector concatenation
	New checks of matrix and vector sizes in operators +, -, *, /.
	
	* src/libYARP_sig/include/yarp/sig/Matrix.h
	* src/libYARP_sig/include/yarp/sig/Vector.h
	* src/libYARP_sig/src/Matrix.cpp
	* src/libYARP_sig/src/Vector.cpp
	New methods have been added to the classes Matrix and Vector:
	Matrix::setSubmatrixm Matrix::setSubrow, Matrix::setSubcol, Vector::setSubvector

2011-09-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/CMakeLists.txt: make yarpserver3 the 
	default name server.  It will now run when "yarpserver"
	or "yarp server" is called [thanks Lorenzo Natale].